jia-core用gradle管理