@@ -3,6 +3,7 @@ package cn.jia.core.util;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.util.Base64;
 import java.util.zip.GZIPInputStream;
 import java.util.zip.GZIPOutputStream;
 import java.util.zip.ZipEntry;
@@ -36,8 +37,7 @@ public class ZipUtil {
 				}
 			}
 		}
-
-		return new sun.misc.BASE64Encoder().encode(out.toByteArray());
+		return Base64.getEncoder().encodeToString(out.toByteArray());
 	}
 
 	/**
@@ -46,8 +46,8 @@ public class ZipUtil {
 	 * Description:使用gzip进行解压缩
 	 * </p>
 	 * 
-	 * @param compressedStr
-	 * @return
+	 * @param compressedStr 被压缩内容
+	 * @return 压缩后内容
 	 */
 	public static String gunzip(String compressedStr) {
 		if (compressedStr == null) {
@@ -57,16 +57,16 @@ public class ZipUtil {
 		ByteArrayOutputStream out = new ByteArrayOutputStream();
 		ByteArrayInputStream in = null;
 		GZIPInputStream ginzip = null;
-		byte[] compressed = null;
+		byte[] compressed;
 		String decompressed = null;
 		try {
-			compressed = new sun.misc.BASE64Decoder().decodeBuffer(compressedStr);
+			compressed = Base64.getDecoder().decode(compressedStr);
 			// compressed=compressedStr.getBytes();
 			in = new ByteArrayInputStream(compressed);
 			ginzip = new GZIPInputStream(in);
 
 			byte[] buffer = new byte[1024];
-			int offset = -1;
+			int offset;
 			while ((offset = ginzip.read(buffer)) != -1) {
 				out.write(buffer, 0, offset);
 			}
@@ -77,20 +77,18 @@ public class ZipUtil {
 			if (ginzip != null) {
 				try {
 					ginzip.close();
-				} catch (IOException e) {
+				} catch (IOException ignored) {
 				}
 			}
 			if (in != null) {
 				try {
 					in.close();
-				} catch (IOException e) {
+				} catch (IOException ignored) {
 				}
 			}
-			if (out != null) {
-				try {
-					out.close();
-				} catch (IOException e) {
-				}
+			try {
+				out.close();
+			} catch (IOException ignored) {
 			}
 		}
 
@@ -104,7 +102,7 @@ public class ZipUtil {
 	 *            压缩前的文本
 	 * @return 返回压缩后的文本
 	 */
-	public static final String zip(String str) {
+	public static String zip(String str) {
 		if (str == null)
 			return null;
 		byte[] compressed;
@@ -118,20 +116,19 @@ public class ZipUtil {
 			zout.write(str.getBytes());
 			zout.closeEntry();
 			compressed = out.toByteArray();
-			compressedStr = new sun.misc.BASE64Encoder().encodeBuffer(compressed);
-		} catch (IOException e) {
-			compressed = null;
+			compressedStr = Base64.getEncoder().encodeToString(compressed);
+		} catch (IOException ignored) {
 		} finally {
 			if (zout != null) {
 				try {
 					zout.close();
-				} catch (IOException e) {
+				} catch (IOException ignored) {
 				}
 			}
 			if (out != null) {
 				try {
 					out.close();
-				} catch (IOException e) {
+				} catch (IOException ignored) {
 				}
 			}
 		}
@@ -141,11 +138,11 @@ public class ZipUtil {
 	/**
 	 * 使用zip进行解压缩
 	 * 
-	 * @param compressed
+	 * @param compressedStr
 	 *            压缩后的文本
 	 * @return 解压后的字符串
 	 */
-	public static final String unzip(String compressedStr) {
+	public static String unzip(String compressedStr) {
 		if (compressedStr == null) {
 			return null;
 		}
@@ -153,15 +150,15 @@ public class ZipUtil {
 		ByteArrayOutputStream out = null;
 		ByteArrayInputStream in = null;
 		ZipInputStream zin = null;
-		String decompressed = null;
+		String decompressed;
 		try {
-			byte[] compressed = new sun.misc.BASE64Decoder().decodeBuffer(compressedStr);
+			byte[] compressed = Base64.getDecoder().decode(compressedStr);
 			out = new ByteArrayOutputStream();
 			in = new ByteArrayInputStream(compressed);
 			zin = new ZipInputStream(in);
 			zin.getNextEntry();
 			byte[] buffer = new byte[1024];
-			int offset = -1;
+			int offset;
 			while ((offset = zin.read(buffer)) != -1) {
 				out.write(buffer, 0, offset);
 			}
@@ -172,27 +169,22 @@ public class ZipUtil {
 			if (zin != null) {
 				try {
 					zin.close();
-				} catch (IOException e) {
+				} catch (IOException ignored) {
 				}
 			}
 			if (in != null) {
 				try {
 					in.close();
-				} catch (IOException e) {
+				} catch (IOException ignored) {
 				}
 			}
 			if (out != null) {
 				try {
 					out.close();
-				} catch (IOException e) {
+				} catch (IOException ignored) {
 				}
 			}
 		}
 		return decompressed;
-	}
-	
-	public static void main(String[] args) {
-		String ss = zip("wegwegwegweg");
-		System.out.println(unzip(ss));
 	}
 }
